--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ notify.twilio.account.sid=ACe0fd04ccc3682e32073e621d05aa5a62
 notify.twilio.account.authcode=fc702c8f4827357e3c0366009a998f5c
 
 notify.phone.number=+919961587769,+918592818516,+919544584653
+
+java.runtime.version=11
