--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
 spring.profiles.active=local
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=ashikpkmadhupam@gmail.com
-spring.mail.password=unityhshfbyzecfi
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
 cowin.get.api.address=https://cdn-api.co-vin.in/api/v2/appointment/sessions/public/calendarByPin
 notify.pincode=670691
 
-notify.twilio.from.number=+16024974375
-notify.twilio.account.sid=ACe0fd04ccc3682e32073e621d05aa5a62
-notify.twilio.account.authcode=fc702c8f4827357e3c0366009a998f5c
-
-notify.phone.number=+919961587769,+918592818516,+919544584653
+notify.telegram.url=https://api.telegram.org
+notify.telegram.token=1881647537:AAFl9PU_3SDW1ttEa8ctaEjVSpfGpDHrOH8
+notify.telegram.chatid=-1001457274947
