--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=5000
 spring.profiles.active=local
 
 cowin.get.api.address=https://cdn-api.co-vin.in/api/v2/appointment/sessions/public/calendarByPin
